--- a/order.html
+++ b/order.html
@@ -175,7 +175,7 @@
         <img src="images/common/icon-lose.png" alt="">
     </div>
     <div class="content">
-        <h1>请扫码支付</h1>
+        <h1>请使用微信扫码支付</h1>
         <img id="payQrcode" src="images/common/er-code.jpg" alt="">
         <div class="price" id="totalPrice">￥2312</div>
         <div class="refresh"><img src="images/common/refresh.png" alt="">刷新</div>
