--- a/advert.html
+++ b/advert.html
@@ -70,7 +70,7 @@
 
     <div class="main">
         <div class="section-1 animation">
-            <!--<img src="images/_advert/s1-2.jpg" alt="">-->
+            <!--<img src="images/propagandize/s1-2.jpg" alt="">-->
             <div class="ui container">
                 <div class="text">
                     <h1>挖媒宝</h1>
@@ -82,7 +82,7 @@
                 </div>
 
             </div>
-            <img src="images/_advert/s1-4.jpg" alt="">
+            <img src="images/propagandize/s1-4.jpg" alt="">
 
         </div>
 
@@ -97,13 +97,13 @@
                     <p>广告一站到达，客户坐享其成。</p>
                     <p class="mobile-ctx-text">在挖媒神器的区块网络中，通过在线客户阅读习惯，精准捕捉目标客户，广告内容精准到达；在线客户不再需要硬件投入，每个挖媒神器在线时长即为广告推广黄金时段，扫码即可变现，广告一站到达，客户坐享其成。</p>
                 </div>
-                <img src="images/_advert/s2-1.png" alt="">
+                <img src="images/propagandize/s2-1.png" alt="">
             </div>
         </div>
 
         <div class="section-3" id="advertS3">
             <div class="ui container">
-                <img src="images/_advert/s3-1.png" alt="">
+                <img src="images/propagandize/s3-1.png" alt="">
                 <div class="text">
                     <h2>开启“去中心化”广告模式先河</h2>
                     <h3>每一笔广告费、甚至每一分钱，均直达客户账户！</h3>
@@ -121,7 +121,7 @@
                 <ul>
                     <li>
                         <div>
-                            <img src="images/_advert/s4-1.png" alt="">
+                            <img src="images/propagandize/s4-1.png" alt="">
                         </div>
                         <h3>投放达到率100%</h3>
                         <p>
@@ -130,7 +130,7 @@
                     </li>
                     <li>
                         <div>
-                            <img src="images/_advert/s4-2.png" alt="">
+                            <img src="images/propagandize/s4-2.png" alt="">
                         </div>
                         <h3>投放效果可控</h3>
                         <p>
@@ -139,7 +139,7 @@
                     </li>
                     <li>
                         <div>
-                            <img src="images/_advert/s4-3.png" alt="">
+                            <img src="images/propagandize/s4-3.png" alt="">
                         </div>
                         <h3>“0” 渠道成本</h3>
                         <p>
@@ -256,7 +256,7 @@
                     </div>
                     <div class="item right">
                         <div class="ui small image qrcode">
-                            <img src="./images/cq.jpg">
+                            <img src="">
                         </div>
                     </div>
                 </div>
