--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                         </div>
                         <div class="item right">
                             <div class="ui small image qrcode">
-                                <img src="./images/cq.jpg">
+                                <img src="">
                             </div>
                         </div>
                     </div>
