--- a/order.html
+++ b/order.html
@@ -160,7 +160,7 @@
                 </div>
                 <div class="item right">
                     <div class="ui small image qrcode">
-                        <img src="./images/cq.jpg">
+                        <img src="">
                     </div>
                 </div>
             </div>
