--- a/help/about_company.html
+++ b/help/about_company.html
@@ -29,7 +29,7 @@
             <div class="ui logo shape">
                 <div class="sides">
                     <div class="active ui side">
-                        <a href="../index.html"><img class="ui image" src="../images/logo.png"></a>
+                        <a href="../data.html"><img class="ui image" src="../images/logo.png"></a>
                     </div>
                 </div>
             </div>
@@ -37,8 +37,8 @@
         <div class="item">
             <div class="center menu">
                 <ul>
-                    <li><a href="../index.html">首页</a></li>
-                    <li><a href="../product.html">挖媒神器</a></li>
+                    <li><a href="../index.html">挖媒神器</a></li>
+                    <li><a href="../data.html">数据中心</a></li>
                     <li><a href="../advert.html">广告招募</a></li>
                     <li><a href="../more.html">了解更多</a></li>
                 </ul>
@@ -54,16 +54,18 @@
                     <li>
                         <span id="sellTime">开抢时间 --</span>
                     </li>
+                    <li class="ui-btn"><a href="order.html">立即购买</a></li>
                 </ul>
             </div>
         </div>
     </div>
     <div class="ui top thin sidebar inverted vertical menu">
         <!--<a class="item" href="javascript:;">&nbsp;</a>-->
-        <a class="item" href="../index.html">首页</a>
-        <a class="item" href="../product.html">挖煤神器</a>
+        <a class="item" href="../index.html">挖媒神器</a>
+        <a class="item" href="../data.html">数据中心</a>
         <a class="item" href="../advert.html">广告招募</a>
-        <a class="item" href="../more.html">了解更多</a>
+        <a class="item" href="more.html">了解更多</a>
+        <a class="item" href="order.html">立即购买</a>
     </div>
 </div>
 
