--- a/more.html
+++ b/more.html
@@ -20,10 +20,11 @@
 </head>
 <body id="more">
 <div class="ui top thin sidebar inverted vertical menu">
-    <a class="item" href="index.html">首页</a>
-    <a class="item" href="product.html">挖煤神器</a>
+    <a class="item" href="index.html">挖媒神器</a>
+    <a class="item" href="data.html">数据中心</a>
     <a class="item" href="advert.html">广告招募</a>
     <a class="item" href="more.html">了解更多</a>
+    <a class="item" href="order.html">立即购买</a>
 </div>
 <div class="header">
     <div class="ui container">
@@ -42,8 +43,8 @@
         <div class="item">
             <div class="center menu">
                 <ul>
-                    <li><a href="index.html">首页</a></li>
-                    <li><a href="product.html">挖媒神器</a></li>
+                    <li><a href="index.html">挖媒神器</a></li>
+                    <li><a href="data.html">数据中心</a></li>
                     <li><a href="advert.html">广告招募</a></li>
                     <li><a href="more.html">了解更多</a></li>
                 </ul>
@@ -59,6 +60,7 @@
                     <li>
                         <span id="sellTime">开抢时间 --</span>
                     </li>
+                    <li class="ui-btn"><a href="order.html">立即购买</a></li>
                 </ul>
             </div>
         </div>
