--- a/stylesheets/productfont/demo_fontclass.html
+++ b/stylesheets/productfont/demo_fontclass.html
@@ -14,7 +14,7 @@
             
                 <li>
                 <i class="icon iconfont icon-shouyedaohangicon"></i>
-                    <div class="name">首页_导航icon</div>
+                    <div class="name">挖媒神器_导航icon</div>
                     <div class="fontclass">.icon-shouyedaohangicon</div>
                 </li>
             
