--- a/stylesheets/productfont/demo_symbol.html
+++ b/stylesheets/productfont/demo_symbol.html
@@ -31,7 +31,7 @@
                     <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-shouyedaohangicon"></use>
                     </svg>
-                    <div class="name">首页_导航icon</div>
+                    <div class="name">挖媒神器_导航icon</div>
                     <div class="fontclass">#icon-shouyedaohangicon</div>
                 </li>
             
