--- a/stylesheets/productfont/demo_unicode.html
+++ b/stylesheets/productfont/demo_unicode.html
@@ -34,7 +34,7 @@
             
                 <li>
                 <i class="icon iconfont">&#xe601;</i>
-                    <div class="name">首页_导航icon</div>
+                    <div class="name">挖媒神器_导航icon</div>
                     <div class="code">&amp;#xe601;</div>
                 </li>
             
