--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="image_src" type="image/jpeg" href="./images/logo.png"/>
 
-    <title>挖媒神器</title>
+    <title>挖媒</title>
 
     <meta name="description" content="挖媒"/>
     <meta name="keywords" content="挖媒"/>
@@ -69,6 +69,8 @@
         </div>
     </div>
 
+    <a class="ui-fixed-btn mobile" href="order.html">立即购买</a>
+
     <!--<div class="mobile-header">-->
         <!--<div class="ui container">-->
             <!--<div class="item">-->
@@ -116,14 +118,19 @@
                     <div class="section-1">
 
                         <div class="product-imgs" id="productImgs">
-                            <div>
-                                <img class="pc" src="images/product/s1-3.png" alt="挖媒神器">
-                                <img class="mobile" src="images/product/s1-4.png" alt="挖媒神器">
-                            </div>
+                            <div class="left-img mobile"><img src="images/product/02.png" alt="挖媒神器"></div>
+                            <div class="right-img mobile"><img src="images/product/01.png" alt="挖媒神器"></div>
                             <div class="text">
                                 <h1>无中心化赚钱传播智能类KEY</h1>
                                 <h3 id="price">￥--</h3>
                             </div>
+                            <!--<div>-->
+                                <!--<img class="pc" src="images/product/01.png" alt="挖媒神器">-->
+                                <!--<img class="pc" src="images/product/02.png" alt="挖媒神器">-->
+                                <!--<img class="mobile" src="images/product/s1-4.png" alt="挖媒神器">-->
+                            <!--</div>-->
+                            <div class="left-img pc"><img src="images/product/02.png" alt="挖媒神器"></div>
+                            <div class="right-img pc"><img src="images/product/01.png" alt="挖媒神器"></div>
                         </div>
                     </div>
                 </div>
@@ -215,8 +222,14 @@
                     <h2>拥有挖媒神器 你就拥有了...</h2>
                     <p>在不远的未来，我们还将为挖媒神器赋予更多的功能，更强大的信息传播能力，</p>
                     <p>更尖端的玩法，而这一切的起点，就是你手上的"挖媒神器"</p>
-                    <img src="images/product/s7-1.png" alt="">
-                    <a href="order.html">
+                    <a class="mobile" href="order.html">
+                        <span>立即申请预售</span>
+                    </a>
+                    <div>
+                        <img class="top-img" src="images/product/03.png" alt="">
+                        <img class="bottom-img" src="images/product/06.png" alt="">
+                    </div>
+                    <a class="pc" href="order.html">
                        <span>立即申请预售</span>
                     </a>
                 </div>
